--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ mysql-connector-python==8.2.0
 django-simple-history==3.4.0
 djangorestframework==3.14.0
 django-sequences==2.9
-simplejson==3.19.2
+pylint-django==2.5.5
